--- a/padrao-esplee.css
+++ b/padrao-esplee.css
@@ -91,3 +91,11 @@ h1{
 strong{
     font-weight: 500;
 }
+button{
+    padding: 16px 24px;
+    border-radius: 3px;
+    border: none;
+    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.15);
+
+    font-weight: 500;
+}
