--- a/padrao-esplee.css
+++ b/padrao-esplee.css
@@ -99,3 +99,50 @@ button{
 
     font-weight: 500;
 }
+header{
+    background: var(--dark0-color) url(../../imagens/background/bg-cover-g.jpg) center center no-repeat;
+    background-size: cover;
+    color: var(--light0-color);
+    width: 100%;
+}
+
+    #header-content{
+        max-width: 1200px;
+        padding: 0px 48px;
+        margin: auto;
+    }
+
+    nav{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        padding-top: 48px;
+        margin-bottom: 96px;
+    }
+        #nav-logo{
+            width: 48px;
+            position: relative;
+        }
+        #nav-logo:hover{
+            transition: .25s;
+            transform: scale(1.05);
+        }
+        #nav-links{
+            display: flex;
+            gap: 40px;
+
+            position: relative;
+        }
+            #nav-links > a{
+                text-decoration: none;
+                color: var(--light-1-color);
+                font-weight: 600;
+
+                position: relative;
+            }
+                #nav-links > a:hover{
+                    transition: .2s;
+                    color: var(--light1-color);
+                    transform: scale(1.05);
+                }
