--- a/index/index.css
+++ b/index/index.css
@@ -16,52 +16,97 @@
     --light-2-color:#DCCFE5;
     --light-1-color:#ECE4F2;
     --light0-color:#F8F0FF;
-    --light1-color:#FBF7FF;
-}
-
+    --light1-color:#FBF7FF;}
 body, html{
     width: 100vw;
     height: 100vh;
     color: var(--dark0-color);
-    background-color: var(--light1-color);
-}
+    background-color: var(--light1-color);}
 header{
-    background-image: url('../imagens/background/bg-main-g.jpg');
-}
+    background-image: url('../imagens/background/bg-main-g.jpg');}
     #header-headings{
         max-width: 700px;
-        margin-bottom: 96px;
-    }
+        margin-bottom: 96px;}
         #header-headings > h1{
-            margin-bottom: 40px;
-        }
+            margin-bottom: 40px;}
         #header-headings > p{
-            text-indent: 0px;
             font-size: 1.333em;
             font-weight: 400;
-            margin-bottom: 0px;
-        }
+            margin-bottom: 0px;}
         #header-headings strong{
             color: var(--green-1-color);
             font-family: 'espleetype', sans-serif;
-            font-size: 1em;
-        }
-    button{
-        background-color: var(--red0-color);
-        color: var(--light1-color);
-        margin-bottom: 96px;
-    }
-        button:hover{
-            transition: .15s;
-            background-color: var(--red1-color);
-            color: var(--light0-color);
-        }
+            font-size: 1em;}
     #seta{
         display: flex;
         justify-content: center;
-        padding-bottom: 80px;
-    }
+        padding-top: 64px;
+        padding-bottom: 80px;}
         #seta > img{
-            width: 40px;
-        }
-    
+            transition: .55s;
+            width: 40px;}
+            #seta > img:hover{
+                transition: .4s;
+                transform: translateY(12px);}
+section#pt1 div.content{
+    display: flex;
+    flex-direction: row;
+    gap: 80px;
+
+    height: 450px;
+    margin: auto;
+    margin-top: 100px;
+    margin-bottom: 232px;}
+    section#pt1 div.content .tag h2{
+        display: inline-block;
+        font-size: 1em;
+        background-color: var(--green0-color);
+        color: var(--light1-color);
+        padding: 10px;
+        border-radius: 5px;}
+        section#pt1 div.content div.right{
+        flex: 45%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;}
+        section#pt1 div.content div.right div.item{
+            transition: .55s;
+            display: flex;
+            align-items: center;
+            gap: 24px;
+
+            background-color: var(--light0-color);
+            padding: 24px 48px 24px 48px;
+            border-radius: 16px;
+            box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.15);}
+            section#pt1 div.content div.right div.item:hover{
+                transition: .4s;
+                transform: translateX(-32px);}
+            div.content div.item div.num{
+                font-family: 'espleetype', sans-serif;
+                color: var(--green0-color);
+                font-size: 3.157em;}
+            div.content div.item p{
+                margin: 0px;}
+        section#pt1 div.left{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            flex: 45%;}
+section#pt2{
+    color: var(--light1-color);
+    background-color: var(--dark0-color);}
+    section#pt2 div.content{
+        margin: 180px auto;
+        text-align: center;}
+        section#pt2 div.content div.cases{
+            display: flex;
+            justify-content: space-around;
+            margin: 80px auto;}
+            section#pt2 div.content div.cases div.case{
+                width: 400px;
+                height: 320px;
+                border-radius: 12px;
+                background-color: var(--dark-2-color);
+                position: relative;
+            }
