--- a/index/index.css
+++ b/index/index.css
@@ -57,7 +57,7 @@ section#pt1 div.content{
     margin: auto;
     margin-top: 100px;
     margin-bottom: 232px;}
-    section#pt1 div.content .tag h2{
+    section div.content .tag h2{
         display: inline-block;
         font-size: 1em;
         background-color: var(--green0-color);
@@ -101,12 +101,40 @@ section#pt2{
         text-align: center;}
         section#pt2 div.content div.cases{
             display: flex;
-            justify-content: space-around;
+            justify-content: space-between;
             margin: 80px auto;}
             section#pt2 div.content div.cases div.case{
+                transition: .3s;
                 width: 400px;
                 height: 320px;
                 border-radius: 12px;
                 background-color: var(--dark-2-color);
                 position: relative;
-            }
+                z-index: 1;}
+                #case1{
+                    background: var(--dark-2-color) url() center center no-repeat; 
+                    background-size: cover;}
+                #case2{
+                    background: var(--dark-2-color) url() center center no-repeat; 
+                    background-size: cover;}
+                #case3{
+                    background: var(--dark-2-color) url() center center no-repeat; 
+                    background-size: cover;}
+                section#pt2 div.content div.cases div.case div.mais-info{
+                    transition: .35s;
+                    background-color: var(--green0-color);
+                    width: 48px;
+                    padding: 10px 6px;
+                    border-radius: 5px;
+                    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.15);
+                    
+                    position: absolute;
+                    top: 44%;
+                    right: -12px;}
+                    section#pt2 div.content div.cases div.case:hover div.mais-info{
+                        transition: .2s;
+                        transform: translateX(8px);
+                        background-color: var(--green1-color);}
+                    section#pt2 div.content div.cases div.case:hover{
+                        transition: .2s;
+                        transform: scale(1.05);}
