--- a/padrao-esplee/padrao-esplee.css
+++ b/padrao-esplee/padrao-esplee.css
@@ -33,8 +33,7 @@
     font-size: 21px;
     font-family: 'Roboto',sans-serif;}
 body, html{
-    width: 100vw;
-    height: 100vh;}
+    width: 100%;}
 
 /*CONFIGURAÇÃO DOS TEXTOS-------------------------------*/
 p{
