--- a/pags/secundarias/projetos/tango/css/style.css
+++ b/pags/secundarias/projetos/tango/css/style.css
@@ -65,6 +65,9 @@ nav{
         gap: 20px;
         margin-bottom: 24px;
 }
+p{
+    text-align: justify;
+    text-indent: 2em;}
     nav > img{
         width: 24px;
     }
@@ -81,10 +84,5 @@ nav{
             color: var(--dark0-color);
             transform: scale(1.03);
         }
-p{
-    text-indent: 1.5em;
-    text-align: justify;
-}
-section{
-    max-width: 1800px;
-}
+div.galery img{
+    width: 100%;}
