--- a/pags/secundarias/projetos/descript/css/style.css
+++ b/pags/secundarias/projetos/descript/css/style.css
@@ -18,7 +18,7 @@
     --light0-color:#F8F0FF;
     --light1-color:#FBF7FF;}
 header{
-    background-image: url(../imagens/p/tango-p.jpg);}
+    background-image: url();}
     #header-content{
         height: 440px;}
         header div.nav{
