--- a/pags/secundarias/projetos/tango/css/tablet.css
+++ b/pags/secundarias/projetos/tango/css/tablet.css
@@ -17,4 +17,7 @@ header{
         #div2{
             flex: 50%;
         }
+        div.galery div.social div{
+            flex-direction: row;
+        }
 }
