--- a/padrao-esplee/padrao-esplee.css
+++ b/padrao-esplee/padrao-esplee.css
@@ -247,9 +247,9 @@ div.accordion{
     button{
         width: 100%;}}
 @media only screen and (max-width: 600px){
-    *{
+    /**{
         font-size: 16px;
-    }
+    }*/
 
     #nav-ico-logo{
         width: 36px;
