--- a/pags/secundarias/projetos/descripti/css/desktop.css
+++ b/pags/secundarias/projetos/descripti/css/desktop.css
@@ -1,5 +1,5 @@
 header{
-    background-image: url();}
+    background-image: url(../imagens/g/mobile-g.jpg);}
     #header-content{
         height: 640px;}
         header div.nav{
