--- a/pags/secundarias/projetos/css/tablet.css
+++ b/pags/secundarias/projetos/css/tablet.css
@@ -1,5 +1,5 @@
 header{
-    background-image: url(../imagens/m/tango-m.jpg);}
+    background-image: url();}
 @media screen and (min-width: 1000px){
     #header-content{
         height: 520px;}
