--- a/pags/secundarias/projetos/css/desktop.css
+++ b/pags/secundarias/projetos/css/desktop.css
@@ -1,5 +1,5 @@
 header{
-    background-image: url(../imagens/g/tango-g.jpg);}
+    background-image: url();}
     #header-content{
         height: 640px;}
         header div.nav{
