--- a/pags/secundarias/projetos/css/style.css
+++ b/pags/secundarias/projetos/css/style.css
@@ -18,7 +18,7 @@
     --light0-color:#F8F0FF;
     --light1-color:#FBF7FF;}
 header{
-    background-image: url(../imagens/p/tango-p.jpg);}
+    background-image: url();}
     #header-content{
         height: 440px;}
         header div.nav{
@@ -40,7 +40,7 @@ main div.content{
     max-width: 1400px;
     padding: 0px 32px;
     margin: 76px auto;
-    animation: fade 1s forwards;
+    animation: fade 1.5s forwards;
     opacity: 0;}
     div.headings{
         margin: 0px 0px 24px 0px;}
@@ -53,15 +53,15 @@ main div.content{
             color: var(--light1-color);
             padding: 8px 16px;
             border-radius: 20px;}
-        h1{
-            font-family: 'Roboto',sans-serif;
-            font-size: 3.157em;
-            font-weight: 500;
-            margin-bottom: 16px;}
-        h2{
-            font-size: 1.333em;
-            font-weight: 400;
-            margin-bottom: 40px;}
+    h1{
+        font-family: 'Roboto',sans-serif;
+        font-size: 2.369em;
+        font-weight: 500;
+        margin-bottom: 16px;}
+    h2{
+        font-size: 1.333em;
+        font-weight: 400;
+        margin-bottom: 40px;}
 p{
     text-align: justify;}
 nav{
@@ -76,7 +76,7 @@ nav{
         transition: .4s;
         text-decoration: none;
         color: var(--dark0-color);
-        font-weight: 00;
+        font-weight: 400;
 
         position: relative;}
         nav > a:hover{
@@ -87,29 +87,31 @@ nav{
     display: flex;
     flex-direction: column;
     margin: 48px 0px 0px 0px}
-section.galery{
-    background-color: var(--dark0-color);}
     div.galery{
         display: flex;
         flex-direction: column;}
         div.galery picture, div.galery img{
             margin-bottom: -1%;
             width: 100%;}
-            .js-pic{
-                opacity: 0;
-            }
         div.galery div.social{
             display: flex;
+            align-items: center;
+
             gap: 24px;
-            padding: 24px;}
+            padding: 24px;
+        }
         div.galery div.social div{
             display: flex;
             flex-direction: column;
-            gap: 24px;}
+            gap: 24px;
+        }
+            .js-pic{
+                opacity: 0;}
 #cta div.content{
-    text-align: center;}
-
+    text-align: center;
+}
 @media screen and (min-width: 600px){
-header div.icon{
-    width: 48px;
-}}
+    header div.icon{
+        width: 48px;
+    }
+}
