--- a/padrao-esplee/padrao-esplee.css
+++ b/padrao-esplee/padrao-esplee.css
@@ -30,7 +30,7 @@
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
-    font-size: 21px;
+    font-size: 18px;
     font-family: 'Roboto',sans-serif;}
 body, html{
     width: 100%;}
@@ -62,7 +62,7 @@ h2{
     font-weight: 500;
     margin-bottom: 0.5em;}
 h1{
-    font-size: 5.61em;
+    font-size: 4.4em;
     font-weight: 500;
     font-family: 'espleetype', sans-serif;
     margin-bottom: 0.4em;
@@ -70,10 +70,12 @@ h1{
 strong{
     font-weight: 500;}
 
-/*CONFIGURAÇÃO DOS BOTÕES-------------------------------*/
+/*CONFIGURAÇÃO DOS BOTÕES*/
 button{
     cursor: pointer;
     transition: .15s;
+
+    width: 100%;
     padding: 16px 32px;
     border-radius: 3px;
     border: none;
@@ -104,7 +106,7 @@ button{
         outline: 1px solid var(--light1-color);
         color: var(--light1-color);}
 
-/*CONFIGURAÇÃO DO HEADER----------------------------------------*/
+/*CONFIGURAÇÃO DO HEADER*/
 header{
     background-image: url(imagens/background/bg-main-g.jpg);
     background-color: var(--dark0-color);
@@ -118,6 +120,7 @@ header{
         padding: 0px 32px;
         margin: auto;}
     #header-content nav{
+        position: relative;
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -126,29 +129,65 @@ header{
         margin-bottom: 96px;}
         .nav-ico{
             transition: .4s;
-            width: 48px;
+            width: 44px;
             position: relative;}
             .nav-ico:hover{
                 transition: .4s;
                 transform: scale(1.05);}
         #nav-menu-ico{
-            display: none;}
+            width: 44px;
+            display: block;}
+            .icon-fixed{
+                position: fixed;
+                right: 32px;}
         #nav-links{
-            display: flex;
-            gap: 40px;
-
+            transition: .4s;
+            display: none;
             position: relative;}
-            #nav-links > a{
-                transition: .4s;
-                text-decoration: none;
-                color: var(--light-1-color);
-                font-weight: 600;
 
-                position: relative;}
-                #nav-links > a:hover{
-                    transition: .4s;
-                    color: var(--light1-color);
-                    transform: scale(1.05);}
+/*CONFIGURAÇÃO DE NAVBAR*/
+#nav-menu-ico{
+    z-index: 11;}
+.navbar{
+    z-index: 10;
+    transition: 1s;
+    display: block;
+    position: fixed;
+    top: 0px;
+    right: 0px;
+
+    opacity: 0;
+    width: 0px;
+    padding: 120px 0px 0px 0px;
+
+    height: 100%;
+    background-color: var(--dark0-color);}
+.background{
+    z-index: 10;
+    display: none;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+
+    width: 100%;
+    height: 100%;
+    background-color: var(--dark0-color);
+    opacity: 0.5;}
+.links{
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;}
+    .links a{
+        display: none;
+        font-size: 1.111em;
+        font-weight: 500;
+        text-decoration: none;
+        color: var(--light1-color);}
+.show{
+    transition: 1s;
+    opacity: 1;
+    padding: 120px 0px 0px 30px;
+    width: 60vw;}
 
 /*CONFIGURAÇÃO DA SECTION*/
 section{
@@ -197,11 +236,11 @@ div.accordion{
     position: absolute; 
     z-index: 1;}
     .triang.top{
-        border-bottom: 50px solid var(--light1-color);
-        top: -50px;}
+        border-bottom: 32px solid var(--light1-color);
+        top: -32px;}
     .triang.bottom{
-        border-top: 50px solid var(--light1-color);
-        bottom: -50px;}
+        border-top: 32px solid var(--light1-color);
+        bottom: -32px;}
     .triang.right{
         border-left: 50vw solid rgba(255, 0, 0, 0);
         right: 0px;}
@@ -228,28 +267,57 @@ div.accordion{
         transform: translateX(-4px);
     }}
 
+
 /*MEDIA QUERIES*/
-@media only screen and (max-width: 1000px){
+@media only screen and (min-width: 768px){
+    *{
+        font-size: 21px;}   
+    #nav-links{
+        display: flex;
+        gap: 40px;}
+        #nav-links a{
+            color:var(--light1-color);
+            text-decoration: none;
+            font-weight: 500;}
+        #nav-links a:hover{
+            transition: .4s;
+            transform: scale(1.05);}     
+    #nav-menu-ico{
+        display: none;}  
+        button{
+            width: 50%;}
+    }
+@media only screen and (min-width: 992px){
+    button{
+        width: fit-content;
+    }
+    .nav-icon{
+        width: 48px;
+    }
+}
+/*@media only screen and (max-width: 1000px){
     *{
         font-size: 18px;
     }
     button{
         font-size: 1.111em;
     }}
-@media only screen and (max-width: 800px){
-    /*MUDAR O NAV PARA ICON*/
+@media only screen and (min-width: 800px){
+    MUDAR O NAV PARA ICON
     #nav-links{
-        display: none;}
+        display: flex;
+        gap: 40px;}
+        
     #nav-menu-ico{
-        display: block;}
+        display: none;}
     #nav-ico-logo{
         width: 40px;}
     button{
         width: 100%;}}
 @media only screen and (max-width: 600px){
-    /**{
+    {
         font-size: 16px;
-    }*/
+    }
 
     #nav-ico-logo{
         width: 36px;
@@ -268,4 +336,5 @@ div.accordion{
         right: 0px;}
     .triang.left{
         border-right: 50vw solid rgba(255, 0, 0, 0);
-        left: 0px;}}
+        left: 0px;}
+    }
